--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -24,6 +24,11 @@ dependencies:
   video_player: ^0.10.5
   http: ^0.12.0+4
   shared_preferences: ^0.5.6
+  google_maps_flutter: ^0.5.21+15
+  location: ^2.3.5
+  geolocator: ^5.2.0
+  geocoder: ^0.2.1
+  permission_handler: ^4.1.0
   image_picker: ^0.6.3+1
 
   # The following adds the Cupertino Icons font to your application.
