--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   geocoder: ^0.2.1
   permission_handler: ^4.1.0
   image_picker: ^0.6.3+1
+  json_serializable: ^3.2.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
