--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   permission_handler: ^4.1.0
   image_picker: ^0.6.3+1
   json_serializable: ^3.2.5
+  dio: ^3.0.8
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,6 +61,8 @@ flutter:
     - assets/images/img_login.jpg
     - assets/images/ic_add_circle.png
     - assets/images/ic_add.png
+    - lib/lang/en.json
+    - lib/lang/fr.json
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
