--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   image_picker: ^0.6.3+1
   json_serializable: ^3.2.5
   dio: ^3.0.8
+  fluttertoast: ^3.1.3
   flutter_localizations:
     sdk: flutter
 
