--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
   image_picker: ^0.6.3+1
   json_serializable: ^3.2.5
   dio: ^3.0.8
+  flutter_easyloading: ^1.1.0
   fluttertoast: ^3.1.3
+  loading: ^1.0.2
   flutter_localizations:
     sdk: flutter
 
