--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,16 +35,25 @@ dependencies:
   flutter_easyloading: ^1.1.0
   fluttertoast: ^3.1.3
   loading: ^1.0.2
+  flutter_launcher_icons: ^0.7.3
+  flutter_launcher_name: ^0.0.1
+
   flutter_localizations:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
+flutter_icons:
+  image_path: "assets/icons/icon.jpg"
+  android: true
+  ios: true
+flutter_launcher_name:
+  name: "Stop Racisme"
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 
 # For information on the generic Dart part of this file, see the
